# Graphics_Path_Tracing

./: README.md  report.md
code/: CMakeLists.txt  run_all.sh
code/include/: camera.hpp  curve.hpp  direction.hpp  fxaa.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  tracing_MC.hpp  tracing_Whitted.hpp  transform.hpp  triangle.hpp
code/src/: direction.cpp  fxaa.cpp  main.cpp  mesh.cpp  scene_parser.cpp  texture.cpp  tracing_MC.cpp  tracing_Whitted.cpp
code/testcases/: scene01_01.txt  scene02_01.txt  scene03_01.txt  scene03_02.txt  scene03_03.txt  scene03_04.txt  scene03_05.txt  scene03_06.txt  scene03_07.txt  scene04_01.txt  scene04_02.txt  scene04_03.txt  scene04_04.txt  scene04_05.txt  scene04_06.txt  scene05_01.txt  scene05_02.txt  scene05_03.txt  scene06_01.txt  scene07_01.txt  scene07_02.txt  scene08_01.txt  scene08_02.txt  scene08_03.txt  scene09_01.txt  scene10_01.txt  scene10_02.txt  scene11_01.txt  scene12_01.txt  scene12_02.txt  scene13_01.txt  scene13_02.txt  scene14_01.txt  scene14_02.txt  scene14_03.txt  scene14_04.txt  scene15_01.txt  scene15_02.txt  scene15_03.txt  scene16_01.txt  (+1 more)
